# hv_kvp_daemon

./: .gitignore  Makefile.am  README  RPM_PACKING_README.md  bootstrap.sh  configure.ac  hv_kvp_daemon.c  hv_vss_daemon.c  hvuserspace.spec  install_init
debian/: README.Debian  README.source  changelog  control  copyright  hv-kvp-daemon.init  hv-vss-daemon.init  rules
init/: Makefile.am  hv_kvp_daemon.deb
init/deb/: hv_kvp_daemon  hv_vss_daemon
init/rhel/: Makefile.am  hv_vss_daemon
scripts/rhel/: Makefile.am
src/: Makefile.am  hyperv.h
